# sd-strava-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/strava/: __init__.py  config.py  database.py  main.py
src/strava/models/: __init__.py  activity.py  kudos.py  segment.py  segment_effort.py  user.py
src/strava/routers/: __init__.py  activities.py  activity_lists.py  efforts.py  kudos.py  leaderboard.py  segments.py  users.py
src/strava/schemas/: __init__.py  activity.py  effort.py  kudos.py  segment.py  user.py
src/strava/services/: __init__.py  activity_service.py  effort_service.py  kudos_service.py  segment_service.py  user_service.py
tests/: __init__.py  conftest.py  test_healthz.py  test_models.py
verify/: manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_create_activity.py  test_fr2_get_activity.py  test_fr3_list_activities.py  test_fr4_create_segment.py  test_fr5_record_effort.py  test_fr6_segment_leaderboard.py  test_fr7_kudos.py  test_fr8_healthz.py
